Changelog
=========

1.3 (unreleased)
----------------

- Nothing changed yet.


1.2 (2012-09-07)
----------------

- Sender email is not mandatory anymore. We use the one set in Plone
  if no address is given. [vincent]

- Dutch translations. [jladage]

- Fixes in labels and display in the edit form. [vincent]


1.1 (2012-09-07)
----------------

- Nothing changed yet.


1.0 (2012-09-06)
----------------

- Initial release