@@ -4,7 +4,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fixes with schemata that was causing error when saving our custom CT
+  objects. [vincent]
 
 
 1.2 (2012-09-07)
